@@ -35,13 +35,3 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.SimpleLayout
 log4j.appender.stdout.Threshold=INFO
 
-######## redirect all spring framework activity into a separate log
-log4j.logger.org.springframework=INFO, log_spring
-log4j.additivity.org.springframework=false
-log4j.appender.log_spring=org.apache.log4j.RollingFileAppender
-log4j.appender.log_spring.Append=true
-log4j.appender.log_spring.File=logs/spring.log
-log4j.appender.log_spring.layout=org.apache.log4j.PatternLayout
-log4j.appender.log_spring.layout.ConversionPattern=%d %p [%c] - %m%n
-log4j.appender.log_spring.MaxFileSize=200MB
-log4j.appender.log_spring.MaxBackupIndex=3
