@@ -1,3 +1,6 @@
+Jan 09, 2020
+  log names for gene history harmonized with other pipeline logs
+
 Feb 18, 2019, v.2.1.8
   sequence loaders: abort if sequence fasta files are not available
 
